--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,7 @@
     "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["fontawesome.css"]
     }]
   }
