--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,7 @@
       "default_icon": "tab.jpg"
     },
     "background": {
-      "service_worker": "background.js",
-      "type": "module"
+      "service_worker": "background.js"
     },
     "content_scripts": [
     {
