--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     "manifest_version": 3,
     "action": {
       "default_popup": "popup.html",
-      "default_icon": "tab.jpg"
+      "default_icon": "tab.png"
     },
     "background": {
       "service_worker": "background.js",
